--- a/playframework-todolist/app/views/main.scala.html
+++ b/playframework-todolist/app/views/main.scala.html
@@ -10,6 +10,15 @@
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")">
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+<script src="@routes.Assets.at("javascripts/jquery-2.1.3.min.js")" type="text/javascript"></script>
+<script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
+<link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+<script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('.navbar-collapse').find('a[href="' + location.pathname + '"]').parents('li').addClass('active');
+  });
+</script>
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -51,12 +60,5 @@
 
   @content
   
-  <script src="@routes.Assets.at("javascripts/jquery-2.1.3.min.js")" type="text/javascript"></script>
-  <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
-  <script type="text/javascript">
-  	$(document).ready(function() {
-  		$('.navbar-collapse').find('a[href="' + location.pathname + '"]').parents('li').addClass('active');
-  	});
-  </script>
 </body>
 </html>
