Fix description input for todo add action + replace user_todo_list.png

--- a/playframework-todolist/app/views/todolist.scala.html
+++ b/playframework-todolist/app/views/todolist.scala.html
@@ -65,7 +65,7 @@
 <script>
     $(document).ready(function() {
     	
-    	 $('#description').editable();
+    	 $('#table #description').editable();
 
       $(".alertDelete").click(function() {
         var form = $(this).parent();
