--- a/springmvc-todolist/src/main/resources/templates/todolist.html
+++ b/springmvc-todolist/src/main/resources/templates/todolist.html
@@ -24,19 +24,19 @@
                     </tr>
                     </thead>
                     <tbody>
-                    @for(t <- todos) {
-                    <tr>
-                        <td style="width:75px">@t.id</a></td>
-                        <td><a href="#" id="description" data-type="text" data-pk="@t.id" data-url="@routes.Todo.edit()" data-title="Enter description">@t.description</a></td>
-                        <td style="width:145px">
-                            <div class="text-centered" style="float: left;">
-                                @form(routes.Todo.delete(t.id)) {
-                                    <a id="delForm@t.id" title="Delete" class="btn btn-danger btn-s text-centered alertDelete" href="#"><i class="glyphicon glyphicon-trash"></i></a>
-                                }
-                            </div>
-                        </td>
-                    </tr>
-                    }
+<!--                     @for(t <- todos) { -->
+<!--                     <tr> -->
+<!--                         <td style="width:75px">@t.id</a></td> -->
+<!--                         <td><a href="#" id="description" data-type="text" data-pk="@t.id" data-url="@routes.Todo.edit()" data-title="Enter description">@t.description</a></td> -->
+<!--                         <td style="width:145px"> -->
+<!--                             <div class="text-centered" style="float: left;"> -->
+<!--                                 @form(routes.Todo.delete(t.id)) { -->
+<!--                                     <a id="delForm@t.id" title="Delete" class="btn btn-danger btn-s text-centered alertDelete" href="#"><i class="glyphicon glyphicon-trash"></i></a> -->
+<!--                                 } -->
+<!--                             </div> -->
+<!--                         </td> -->
+<!--                     </tr> -->
+<!--                     } -->
                     </tbody>
                 </table>
               </div>
@@ -46,19 +46,19 @@
      <div class="modal fade" id="add-todo">
         <div class="modal-dialog">
           <div class="modal-content">
-            @form(routes.Todo.add()) {
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title">Add todo</h4>
-            </div>
-            <div class="modal-body">
-              <p>Todo description : <input type="text" id="description" name="description" /></p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Save changes</button>
-            </div>
-            }
+          	<form action="#" th:action="@{/todos/add}" th:object="${todo}" method="post">
+	            <div class="modal-header">
+	              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	              <h4 class="modal-title">Add todo</h4>
+	            </div>
+	            <div class="modal-body">
+	              <p>Todo description : <input type="text" th:field="*{description}" /></p>
+	            </div>
+	            <div class="modal-footer">
+	              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	              <button type="submit" class="btn btn-primary">Save changes</button>
+	            </div>
+            </form>
           </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
       </div><!-- /.modal -->
