Complete Todo management CRUD actions + change index page with Spring Framework information

--- a/springmvc-todolist/src/main/resources/templates/index.html
+++ b/springmvc-todolist/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
       <div class="jumbotron" style="margin-top:50px;">
         <div class="container">
           <h1>Todolist with OAuth2</h1>
-          <p>This is a task list manager based on Play Framework, OAuth2 and Bootstrap. This is a sample application to show you how to access oauth2 protected data.</p>
+          <p>This is a task list manager based on Spring Framework, OAuth2 and Bootstrap. This is a sample application to show you how to access oauth2 protected data.</p>
           <p>This is the client application part, Enjoy !</p>
           <p th:if="${session.username == null}"><a class="btn btn-primary btn-lg" th:href="@{/login}" role="button">Sign in</a></p>
         </div>
@@ -18,10 +18,10 @@
       <div class="container homepage">
         <div class="row">
           <div class="col-lg-4">
-            <img class="img-circle" src="images/play_full_color.png" alt="Generic placeholder image" width="140" height="140" />
-            <h2>Play Framework</h2>
-            <p>Play Framework makes it easy to build web applications with Java and Scala. Play is based on a lightweight, stateless, web-friendly architecture. </p>
-            <p><a class="btn btn-default" href="https://www.playframework.com/" role="button">View details</a></p>
+            <img class="img-circle" src="images/spring-logo.png" alt="Generic placeholder image" width="140" height="140" />
+            <h2>Spring Framework</h2>
+            <p>The Spring Framework provides a comprehensive programming and configuration model for modern Java-based enterprise applications - on any kind of deployment platform.</p>
+            <p><a class="btn btn-default" href="https://spring.io/" role="button">View details</a></p>
           </div>
           <div class="col-lg-4">
             <img class="img-circle" src="images/oauth-2-sm.png" alt="Generic placeholder image" width="140" height="140" />
