--- a/angularjs-todolist/app/views/todolist.html
+++ b/angularjs-todolist/app/views/todolist.html
@@ -7,7 +7,9 @@
         Add todo
       </button>
     </div>
-    <div>
+			<ul ng-repeat="todo in todos">
+      	<li>{{todo}}</li>
+    	</ul>
       <table id="table" class="table table-bordered table-striped">
     	  <thead>
           <tr>
@@ -37,23 +39,24 @@
 <div class="modal fade" id="add-todo">
 	<div class="modal-dialog">
     <div class="modal-content">
-    	<form action="#" th:action="@{/todos/add}" th:object="${todo}" method="post">
-        <div class="modal-header">
+			<form role="form" ng-submit="addTodo()">
+				<div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <h4 class="modal-title">Add todo</h4>
         </div>
-        <div class="modal-body">
-          <p>Todo description : <input type="text" th:field="*{description}" /></p>
+				<div class="modal-body">
+          <p>Todo description : <input type="text" ng-model="todo" placeholder="What needs to be done?" /></p>
         </div>
-        <div class="modal-footer">
+				<div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           <button type="submit" class="btn btn-primary">Save changes</button>
         </div>
-      </form>
+			</form>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-      
+ 
+<!--     
 <script>
 	$(document).ready(function() {
 		$('#table #description').editable();  
@@ -66,3 +69,4 @@
     });
   });
 </script>
+-->
