--- a/angularjs-todolist/app/views/todolist.html
+++ b/angularjs-todolist/app/views/todolist.html
@@ -7,26 +7,21 @@
         Add todo
       </button>
     </div>
-			<ul ng-repeat="todo in todos">
-      	<li>{{todo}}</li>
-    	</ul>
       <table id="table" class="table table-bordered table-striped">
-    	  <thead>
-          <tr>
+    	  <thead>          
+					<tr>
             <th>ID</th>
             <th>Title</th>
             <th></th>
           </tr>
         </thead>
         <tbody>
-          <tr th:each="t : ${todos}">
-            <td style="width:75px" th:text="${t.id}"></td>
-            <td><a href="#" id="description" data-type="text" th:attr="data-pk=${t.id}, data-url=@{/todos/edit}" data-title="Enter description" th:text="${t.description}"></a></td>
+          <tr ng-repeat="t in todos">
+            <td style="width:75px">{{t.id}}</td>
+            <td><a href="#" editable-text="t.description" onbeforesave="editTodo(t.id, $data)" >{{ t.description || "empty" }}</a></td>
             <td style="width:145px">
               <div class="text-centered" style="float: left;">
-              	<form th:action="@{/todos/{id}/delete(id=${t.id})}" method="post">
-                  <a th:attr="id='delForm' + ${t.id}" title="Delete" class="btn btn-danger btn-s text-centered alertDelete" href="#"><i class="glyphicon glyphicon-trash"></i></a>
-                </form>
+								<a ng-click="deleteTodo(t)" title="Delete" class="btn btn-danger btn-s text-centered alertDelete"><i class="glyphicon glyphicon-trash"></i></a>
               </div>
             </td>
           </tr>
@@ -55,11 +50,11 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
- 
-<!--     
+  
+<!--    
 <script>
 	$(document).ready(function() {
-		$('#table #description').editable();  
+		// $('#table #description').editable();  
     $(".alertDelete").click(function() {
       var form = $(this).parent();
       var result = confirm("Are you sure ?");
