Add oauth implicit flow

--- a/angularjs-todolist/app/views/main.html
+++ b/angularjs-todolist/app/views/main.html
@@ -3,7 +3,7 @@
 	  <h1>Todolist with OAuth2</h1>
     <p>This is a task list manager based on AngularJS, OAuth2 and Bootstrap. This is a sample application to show you how to access oauth2 protected data.</p>
     <p>This is the client application part, Enjoy !</p>
-    <p ng-hide="username"><a class="btn btn-primary btn-lg" href="#/login" role="button">Sign in</a></p>
+    <p ng-hide="isLoggedIn"><a class="btn btn-primary btn-lg" href="#/login" role="button">Sign in</a></p>
   </div>
 </div>
       
