--- a/angularjs-todolist/app/views/userinfo.html
+++ b/angularjs-todolist/app/views/userinfo.html
@@ -21,4 +21,4 @@
   OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
   SOFTWARE.
 -->
-<!-- Nothing to do redirect page -->
+<p>Redirecting...</p>
